--- a/public/site_assets/ltr/css/login.css
+++ b/public/site_assets/ltr/css/login.css
@@ -394,8 +394,8 @@ h1, h2, h3, h4, h5,
           margin-bottom: 30px;
         }
         .otp-input-fields input {
-          height: 50px;
-          width: 50px;
+          /*height: 50px;*/
+          /*width: 50px;*/
           background-color: transparent;
           border-radius: 4px;
           border: 1px solid #642f91;
