--- a/public/site_assets/ltr/css/styles.css
+++ b/public/site_assets/ltr/css/styles.css
@@ -284,10 +284,11 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 	-ms-border-radius: 10px;
 	-o-border-radius: 10px;
 	object-fit: cover;
-    width: 100%;
-    height: 100%;
+    width: 10rem;
+    height: 7rem;
 	object-position: center;
 }
+
 
 .best-selling .users-list > li .image-container {
 	height: 180px;
@@ -295,6 +296,8 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 }
 .best-selling .users-list > li .image-container img {
 	max-height: 200px;
+    width: 100% !important;
+    height: 100% !important;
 }
 
 .best-selling .users-list > li:hover .image-container {
@@ -342,6 +345,8 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 
 .Products-list .users-list > li .image-container img {
 	object-fit: contain;
+    width: 100% !important;
+    height: 100% !important;
 }
 
 .users-list {
@@ -830,12 +835,12 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 	position: absolute;
 	right: 10px;
 	top: 10px;
-	color: #642f91;
+	/*color: #642f91;*/
 	padding: 10px;
 	border: 1px solid #be97df;
 	width: 36px;
 	height: 36px;
-	border-radius: 50%;
+	/*border-radius: 50%;*/
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -976,6 +981,10 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 	width: 100px;
 	height: 100px;
 	margin: -70px 40px 0 10px;
+}
+.bio-user-image img {
+	width: 100px;
+	height: 100px;
 }
 .bio-header {
 	display: flex;
