--- a/public/site_assets/ltr/css/styles.css
+++ b/public/site_assets/ltr/css/styles.css
@@ -833,7 +833,7 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 }
 .flip-shirt {
 	position: absolute;
-	right: 10px;
+	left: 10px;
 	top: 10px;
 	/*color: #642f91;*/
 	padding: 10px;
@@ -913,6 +913,7 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
   }
   .product-page-info {
       height: 15rem;
+      padding-right: 15rem;
 	overflow: auto;
 }
 .design-page-info {
