--- a/public/site_assets/ltr/css/styles.css
+++ b/public/site_assets/ltr/css/styles.css
@@ -253,11 +253,12 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 }
 
 .best-selling .users-list > li {
-	width: 18%;
+	width: 20%;
 }
 .best-selling .users-list > li {
-	width: calc(18.8% - 21px);
-	min-width: 154px;
+	width: 20%;
+	/*width: calc(20% - 21px);*/
+	/*min-width: 154px;*/
 }
 
 .users-list > li .image-container {
@@ -291,11 +292,11 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 
 
 .best-selling .users-list > li .image-container {
-	height: 180px;
+	/*height: 180px;*/
 	box-shadow: 0px 0px 5px rgba(0,0,0,.2);
 }
 .best-selling .users-list > li .image-container img {
-	max-height: 200px;
+	/*max-height: 200px;*/
     width: 100% !important;
     height: 100% !important;
 }
@@ -327,7 +328,7 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 }
 
 .used-design .users-list > li {
-	width: 25%;
+	width: 20%;
 	max-width: 260px;
 }
 .same-designes.used-design .users-list > li {
@@ -1443,6 +1444,7 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 .Products-list h5 {
 	margin-bottom: 5px !important;
 	margin-top: 15px;
+    font-weight: bold;
 }
 .col-md-4 .Products-list h5{
 margin-top: 0;
@@ -1597,11 +1599,12 @@ margin-top: 0;
 	}
 
 	.best-selling .users-list > li {
-		width: calc(18.8% - 21px);
-		min-width: 145px;
+        width: 20%;
+		/*width: calc(20% - 21px);*/
+		/*min-width: 145px;*/
 	}
 	.best-selling .users-list > li .image-container {
-		height: 140px;
+		/*height: 140px;*/
 	}
 	.used-design .users-list > li {
 		min-width: 180px;
