--- a/public/site_assets/rtl/css/styles.css
+++ b/public/site_assets/rtl/css/styles.css
@@ -296,12 +296,14 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 }
 
 .best-selling .users-list > li {
-    width: 18%;
+    width: 20%;
 }
 
 .best-selling .users-list > li {
-    width: calc(18.8% - 21px);
-    min-width: 154px;
+    width: 20%;
+
+    /*width: calc(20% - 21px);*/
+    /*min-width: 154px;*/
 }
 
 .users-list > li .image-container {
@@ -334,12 +336,12 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 }
 
 .best-selling .users-list > li .image-container {
-    height: 180px;
+    /*height: 180px;*/
     box-shadow: 0px 0px 5px rgba(0, 0, 0, .2);
 }
 
 .best-selling .users-list > li .image-container img {
-    max-height: 200px;
+    /*max-height: 200px;*/
     width: 100% !important;
     height: 100% !important;
 }
@@ -372,7 +374,7 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 }
 
 .used-design .users-list > li {
-    width: 25%;
+    width: 20%;
     max-width: 260px;
 }
 
@@ -1664,6 +1666,7 @@ h4.card-total-title {
 .Products-list h5 {
     margin-bottom: 5px !important;
     margin-top: 15px;
+    font-weight: bold;
 }
 
 .col-md-4 .Products-list h5 {
@@ -1850,12 +1853,14 @@ h4.card-total-title {
     }
 
     .best-selling .users-list > li {
-        width: calc(18.8% - 21px);
-        min-width: 145px;
+        width: 20%;
+
+        /*width: calc(18.8% - 21px);*/
+        /*min-width: 145px;*/
     }
 
     .best-selling .users-list > li .image-container {
-        height: 140px;
+        /*height: 140px;*/
     }
 
     .used-design .users-list > li {
