--- a/templates/site/Ar/css/styles.css
+++ b/templates/site/Ar/css/styles.css
@@ -294,7 +294,7 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 	box-shadow: 0px 0px 5px rgba(0,0,0,.2);
 }
 .best-selling .users-list > li .image-container img {
-	max-height: 200px;
+	/*max-height: 200px;*/
 }
 
 .best-selling .users-list > li:hover .image-container {
