--- a/templates/site/Ar/Forget-password.html
+++ b/templates/site/Ar/Forget-password.html
@@ -40,7 +40,7 @@
           <li class="nav-item d-none d-sm-inline-block">
           <a href="#" class="nav-link">Products</a>
           </li>
-          
+
           <li class="nav-item d-none d-sm-inline-block">
             <a href="#" class="nav-link">Explore</a>
             </li>
@@ -56,7 +56,7 @@
 
       <!-- Right navbar links -->
       <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto right-nav">
-        
+
         <li class="nav-item dropdown header-profile">
           <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle fa">
             <div class="image">
@@ -80,13 +80,13 @@
           <div class="col-md-12 col-lg-10">
             <div class="wrap d-md-flex">
               <!-- Right Side -->
-              <div class="text-wrap p-4 p-lg-5 text-center d-flex align-items-center order-md-last">
+              <div class="text-wrap p-4 p-lg-5 text-center d-md-flex align-items-center order-md-last d-none d-md-block">
                 <div class="text w-100">
                   <h2>Welcome</h2>
                   <div><img src="images/login-logo.png"/></div>
                 </div>
               </div>
-              
+
               <!-- Left Side -->
               <div class="login-wrap">
                 <div class="d-flex">
@@ -118,7 +118,7 @@
           </div>
         </div>
       </div>
-    </section>  
+    </section>
     <!-- /.content -->
 
   <footer class="login-footer text-center">
