--- a/templates/site/Website/Login.html
+++ b/templates/site/Website/Login.html
@@ -39,7 +39,7 @@
           <li class="nav-item d-none d-sm-inline-block">
           <a href="#" class="nav-link">Products</a>
           </li>
-          
+
           <li class="nav-item d-none d-sm-inline-block">
             <a href="#" class="nav-link">Explore</a>
             </li>
@@ -55,7 +55,7 @@
 
       <!-- Right navbar links -->
       <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto right-nav">
-        
+
         <li class="nav-item dropdown header-profile">
           <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle fa">
             <div class="image">
@@ -67,7 +67,7 @@
     </div>
   </nav>
   <!-- /.navbar -->
-  
+
 <div class="wrapper">
 
   <!-- Content Wrapper. Contains page content -->
@@ -80,13 +80,13 @@
           <div class="col-md-12">
             <div class="wrap d-md-flex">
               <!-- Right Side -->
-              <div class="text-wrap p-4 p-lg-5 text-center d-flex align-items-center order-md-last">
+                <div class="text-wrap p-4 p-lg-5 text-center d-md-flex align-items-center order-md-last d-none d-md-block">
                 <div class="text w-100">
                   <h2>Welcome Back</h2>
                   <div><img src="images/login-logo.png"/></div>
                 </div>
               </div>
-              
+
               <!-- Left Side -->
               <div class="login-wrap">
                 <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -98,7 +98,7 @@
                   </li>
                 </ul>
                 <div class="tab-content" id="myTabContent">
-                  <div class="tab-pane fade" id="Signup" role="tabpanel" aria-labelledby="Signup-tab">              
+                  <div class="tab-pane fade" id="Signup" role="tabpanel" aria-labelledby="Signup-tab">
                     <form action="#" class="signup-form">
 
                       <div class="signup-photo">
@@ -109,7 +109,7 @@
                           <i class="fa fa-camera"></i>
                         </label>
                       </div>
-                      <div class="row">                        
+                      <div class="row">
                         <div class="col-md-6">
                           <div class="form-group mb-2">
                               <label class="label" for="name">First Name</label>
@@ -121,7 +121,7 @@
                               <label class="label" for="name">Last Name</label>
                               <input type="text" class="form-control" placeholder="" required>
                           </div>
-                        </div>                        
+                        </div>
                         <div class="col-md-6">
                           <div class="form-group mb-2">
                               <label class="label" for="name">Email</label>
@@ -176,7 +176,7 @@
                           <i class="fa fa-eye show-pass"></i>
                         </div>
                       </div>
-                      
+
                       <div class="w-50 text-left">
                         <label class="checkbox-wrap checkbox-primary mb-0">Remember Me
                         <input type="checkbox" checked>
@@ -194,7 +194,7 @@
           </div>
         </div>
       </div>
-    </section>  
+    </section>
     <!-- /.content -->
 
   <footer class="login-footer text-center">
