--- a/templates/site/Website/css/styles.css
+++ b/templates/site/Website/css/styles.css
@@ -284,8 +284,8 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 	-ms-border-radius: 10px;
 	-o-border-radius: 10px;
 	object-fit: cover;
-	width: 100%;
-	height: 100%;
+    width: 10rem;
+    height: 7rem;
 	object-position: center;
 }
 
