--- a/public/site_assets/rtl/css/styles.css
+++ b/public/site_assets/rtl/css/styles.css
@@ -619,7 +619,7 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
 .footer-sidebar-list {
     display: flex;
     align-items: center;
-     justify-content: center;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -1120,6 +1120,7 @@ body:not(.sidebar-mini-md):not(.sidebar-mini-xs):not(.layout-top-nav) .main-head
     height: 100px;
     margin: -70px 40px 0 10px;
 }
+
 .bio-user-image img {
     width: 100px;
     height: 100px;
@@ -1816,7 +1817,7 @@ h4.card-total-title {
 
     /********************* Sidebar *********************/
     .main-sidebar {
-        top: 119px !important;
+        top: 12vh !important;
         min-height: calc(100vh - 119px) !important;
     }
 
@@ -2029,6 +2030,27 @@ h4.card-total-title {
     }
 }
 
+@media (max-width: 767px) {
+    .main-sidebar {
+        top: 17vh !important;
+    }
+}
+
 .swal2-modal {
     max-height: 14rem !important;
 }
+
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 5vh !important;
+    left: 10px !important;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 5vh !important;
+}
+
+.select2-container .select2-selection--single {
+    height: 5vh !important;
+}
+
