--- a/public/site_assets/rtl/css/styles.css
+++ b/public/site_assets/rtl/css/styles.css
@@ -2032,7 +2032,17 @@ h4.card-total-title {
 
 @media (max-width: 767px) {
     .main-sidebar {
-        top: 17vh !important;
+        top: 19vh !important;
+    }
+}
+@media (max-width: 414px) {
+    .main-sidebar {
+        top: 19vh !important;
+    }
+}
+@media (max-width: 375px) {
+    .main-sidebar {
+        top: 25vh !important;
     }
 }
 
